--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -10,6 +10,7 @@
 }
 else
 {
+    @Html.ActionLink("New Customer", "New", "Customers", new { @class = "btn btn-primary" })
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
