--- a/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Views/Movies/MovieForm.cshtml
@@ -17,12 +17,14 @@
         @Html.TextBoxFor(m => m.Movies.RealeseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
     </div>
     <div>
-        @Html.LabelFor(m=>m.Movies.Genre)
-        @Html.DropDownListFor(m=>m.Movies.Genre, new SelectList(Model.Genres, "Id","Genre"), "Select Genre", new { @class = "form-control" })
+        @Html.LabelFor(m=>m.Movies.GenreId)
+        @Html.DropDownListFor(m=>m.Movies.GenreId, new SelectList(Model.Genres, "Id","Name"), "Select Genre", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movies.NumberInStock)
         @Html.TextBoxFor(m => m.Movies.NumberInStock, new { @class = "form-control" })
     </div>
+    @Html.HiddenFor(m => m.Movies.Id)
+    <button type="submit" class="btn btn-primary">Save</button>
 }
 
