--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -11,14 +11,17 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Customers.Name)
         @Html.TextBoxFor(m => m.Customers.Name, new { @class ="form-control" })
+        @Html.ValidationMessageFor(m=>m.Customers.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customers.Birthdate)
         @Html.TextBoxFor(m => m.Customers.Birthdate,"{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Customers.Birthdate)
     </div>    
     <div class="form-group">
         @Html.LabelFor(m => m.Customers.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customers.MembershipTypeId, new SelectList(Model.MembershipTypes,"Id","Name"),"Select Membership Type",new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Customers.MembershipTypeId)
     </div>
     <div class="checkbox">
         <label>
