--- a/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Views/Movies/MovieForm.cshtml
@@ -9,22 +9,30 @@
 @using(Html.BeginForm("Save", "Movies"))
 {
     <div class="form-group">
-        @Html.LabelFor(m => m.Movies.Name)
-        @Html.TextBoxFor(m => m.Movies.Name, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Movies.RealeseDate)
-        @Html.TextBoxFor(m => m.Movies.RealeseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.LabelFor(m => m.RealeseDate)
+        @Html.TextBoxFor(m => m.RealeseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.RealeseDate)
     </div>
     <div>
-        @Html.LabelFor(m=>m.Movies.GenreId)
-        @Html.DropDownListFor(m=>m.Movies.GenreId, new SelectList(Model.Genres, "Id","Name"), "Select Genre", new { @class = "form-control" })
+        @Html.LabelFor(m=>m.GenreId)
+        @Html.DropDownListFor(m=>m.GenreId, new SelectList(Model.Genres, "Id","Name"), "Select Genre", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.GenreId)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Movies.NumberInStock)
-        @Html.TextBoxFor(m => m.Movies.NumberInStock, new { @class = "form-control" })
+        @Html.LabelFor(m => m.NumberInStock)
+        @Html.TextBoxFor(m => m.NumberInStock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NumberInStock)
     </div>
-    @Html.HiddenFor(m => m.Movies.Id)
+    @Html.HiddenFor(m => m.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
-
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
