--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -4,7 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<table id="customers" class="table table-bordered table-hover">
+
+@Html.ActionLink("New Customer", "New", "Customers", null, new { @class = "btn btn-primary" })
+<table id="customers" class="table table-bordered table-hover" style="margin-top:25px;">
     <thead>
         <tr>
             <th>Customer</th>
@@ -18,7 +20,7 @@
 @section scripts{
     <script>
         $(document).ready(function () {
-            $("#customers").DataTable({
+           var table = $("#customers").DataTable({
                 ajax: {
                     url: "/api/customers",
                     dataSrc:""
@@ -52,7 +54,7 @@
                             url: "/api/customers/" + button.attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
-                                button.parents("tr").remove();
+                                table.row(button.parents("tr")).remove().draw();
                             }
                         });
                     }
