--- a/Vidly/Views/Account/Login.cshtml
+++ b/Vidly/Views/Account/Login.cshtml
@@ -53,7 +53,17 @@
     </div>
     <div class="col-md-4">
         <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+            
+<h4>Other options</h4>
+<hr>
+        <div>
+            <p>
+                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                for details on setting up this ASP.NET application to support logging in via external services.
+            </p>
+        </div>
+
+
         </section>
     </div>
 </div>
