--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -6,7 +6,7 @@
 
 <h2>New Rental</h2>
 
-<form action="">
+<form action="" id="newRental">
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
@@ -73,6 +73,22 @@
             $("#movie").typeahead("val", "");
             vm.movieIds.push(movie.id);
         });
+
+        $("#newRental").submit(function (e) {
+            e.preventDefault();
+            $.ajax({
+                url: "/api/NewRental",
+                method: "post",
+                data: vm
+            })
+            .done(function () {
+                toastr.success("Rentals successfully recorded.");
+            })
+            .fail(function () {
+                toastr.error("something wrong!");
+            });
+        });
+
     });
 
 </script>
