--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -10,26 +10,26 @@
 {
     <div class="form-group">
         @Html.ValidationSummary(true,"Please fix the following errors")
-        @Html.LabelFor(m => m.Customers.Name)
-        @Html.TextBoxFor(m => m.Customers.Name, new { @class ="form-control" })
-        @Html.ValidationMessageFor(m=>m.Customers.Name)
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name, new { @class ="form-control" })
+        @Html.ValidationMessageFor(m=>m.Name)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customers.MembershipTypeId)
-        @Html.DropDownListFor(m => m.Customers.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Customers.MembershipTypeId)
+        @Html.LabelFor(m => m.MembershipTypeId)
+        @Html.DropDownListFor(m => m.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.MembershipTypeId)
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Customers.Birthdate)
-        @Html.TextBoxFor(m => m.Customers.Birthdate,"{0:d MMM yyyy}", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m=>m.Customers.Birthdate)
+        @Html.LabelFor(m => m.Birthdate)
+        @Html.TextBoxFor(m => m.Birthdate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Birthdate)
     </div>
     <div class="checkbox">
         <label>
-            @Html.CheckBoxFor(m => m.Customers.IsSubscribedToNewsleter)Check me out
+            @Html.CheckBoxFor(m => m.IsSubscribedToNewsleter)Check me out
         </label>
     </div>
-    @Html.HiddenFor(m => m.Customers.Id)
+    @Html.HiddenFor(m => m.Id)
     @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
