--- a/Vidly/Views/Movies/Details.cshtml
+++ b/Vidly/Views/Movies/Details.cshtml
@@ -8,7 +8,7 @@
 
 <ul>
     <li>Genre: @Model.Genre</li>
-    <li>ReleaseDate: @Model.RealeseDate</li>
+    <li>ReleaseDate: @Model.ReleaseDate</li>
     <li>Date Added: @Model.DateAdded</li>
     <li>Number in Stock: @Model.NumberInStock</li>
 </ul>
