--- a/Vidly/Views/Movies/List.cshtml
+++ b/Vidly/Views/Movies/List.cshtml
@@ -5,75 +5,84 @@
 }
 
 <h2>Movies</h2>
-    @Html.ActionLink("New Movie","New","Movies",null, new { @class = "btn btn-primary" })
-    <table class="table table-bordered table-hover" id="movies" style="margin-top:25px;">
-        <thead>
-            <tr>
-                <th>Movie</th>
-                <th>Genre</th>
-                <th>#</th>
-            </tr>
-        </thead>
-        <tbody>
+@Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })
+<table class="table table-bordered table-hover" id="movies" style="margin-top:25px;">
+    <thead>
+        <tr>
+            <th>Movie</th>
+            <th>Genre</th>
+            <th>Added Date</th>
+            <th>#</th>
+        </tr>
+    </thead>
+    @* <tbody>
 
-            @*@foreach (var m in Model)
-            {
-                <tr>
-                    <td>@Html.ActionLink(m.Name, "Edit", "Movies", new { id = m.Id }, null)</td>
-                    <td>@m.Genre.Name</td>
-                </tr>
-            }*@
-        </tbody>
-    </table>
+        @foreach (var m in Model)
+         {
+             <tr>
+                 <td>@Html.ActionLink(m.Name, "Edit", "Movies", new { id = m.Id }, null)</td>
+                 <td>@m.Genre.Name</td>
+             </tr>
+         }
+            </tbody>*@
+</table>
 @section scripts
     {
-        <script>
-            $(document).ready(function () {
-                var table = $("#movies").DataTable({
-                    ajax: {
-                        url: "/api/movies",
-                        dataSrc: ""
+    <script>
+        $(document).ready(function () {
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movies",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
                     },
-                    columns: [
-                        {
-                            data: "name",
-                            render: function (data, type, movie) {
-                                return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
+                    {
+                        data: "genre.name"
+                    },
+                    {
+                        data: "dateAdded",
+                        render: function (data, type, row) {
+                            if (type === "sort" || type === "type") {
+                                return data;
                             }
-                        },
-                        {
-                            data: "genre.name"
-                        },
-                        {
-                            data: "id",
-                            render: function (data) {
-                                return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                            return moment(data).format("MM-DD-YYYY HH:mm");
+                        }
+                        
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+            });
+
+            $("#movies").on("click", ".js-delete", function () {
+                var button = $(this);
+
+                bootbox.confirm("Are you sure you want to delete this movie?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/movies/" + button.attr("data-customer-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
                             }
-                        }
-                    ]
 
-
-                });
-
-                $("#movies").on("click", ".js-delete", function () {
-                    var button = $(this);
-
-                    bootbox.confirm("Are you sure you want to delete this movie?", function (result) {
-                        if (result) {
-                            $.ajax({
-                                url: "/api/movies/" + button.attr("data-customer-id"),
-                                method: "DELETE",
-                                success: function () {
-                                    table.row(button.parents("tr")).remove().draw();
-                                }
-
-                            });
-                        }
-                    });
+                        });
+                    }
                 });
             });
-        </script>
-    }
+        });
+    </script>
+}
 
 
 
