--- a/Vidly/Content/Site.css
+++ b/Vidly/Content/Site.css
@@ -30,5 +30,14 @@ textarea {
 }
 .gap{
     margin-bottom: 25px;
-    margin-top: 25px;
+}
+.bootboxAlert .modal-dialog {
+    margin-top: 250px;
+    background: #F44336;
+}
+
+.bootboxAlert .modal-dialog .modal-content {
+    background: #EF5350;
+    color:#fff;
+    
 }
